--- a/IpaDownloadTool/IpaDownloadTool/ZXIpaHis(历史记录)/View/ZXIpaHisCell.xib
+++ b/IpaDownloadTool/IpaDownloadTool/ZXIpaHis(历史记录)/View/ZXIpaHisCell.xib
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -15,14 +13,14 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="59.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8HC-jU-Jhm">
-                        <rect key="frame" x="0.0" y="0.0" width="59.5" height="59.5"/>
+                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kFR-Qc-brK">
-                                <rect key="frame" x="8" y="8" width="43.5" height="43.5"/>
+                                <rect key="frame" x="8" y="8" width="44" height="44"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -35,10 +33,10 @@
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bso-3V-Y1d">
-                        <rect key="frame" x="59.5" y="0.0" width="260.5" height="59.5"/>
+                        <rect key="frame" x="60" y="0.0" width="260" height="60"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NQj-ah-Rzt">
-                                <rect key="frame" x="5" y="10" width="225.5" height="20"/>
+                                <rect key="frame" x="5" y="10" width="225" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="bSD-1C-84d"/>
                                 </constraints>
@@ -47,7 +45,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZXK-lE-n50">
-                                <rect key="frame" x="5" y="30" width="225.5" height="20"/>
+                                <rect key="frame" x="5" y="30" width="225" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="FWR-eO-4Y7"/>
                                     <constraint firstAttribute="height" constant="20" id="KDw-0k-YEc"/>
@@ -57,10 +55,10 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.40000000000000002" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="more_icon" translatesAutoresizingMaskIntoConstraints="NO" id="XoG-3l-fh2">
-                                <rect key="frame" x="235.5" y="22.5" width="15" height="15"/>
+                                <rect key="frame" x="238" y="24" width="12" height="12"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="15" id="7Om-31-dVe"/>
-                                    <constraint firstAttribute="width" constant="15" id="ASx-AK-jWA"/>
+                                    <constraint firstAttribute="height" constant="12" id="7Om-31-dVe"/>
+                                    <constraint firstAttribute="width" constant="12" id="ASx-AK-jWA"/>
                                 </constraints>
                             </imageView>
                         </subviews>
@@ -77,7 +75,7 @@
                         </constraints>
                     </view>
                     <view alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nuZ-Se-hZu">
-                        <rect key="frame" x="0.0" y="58.5" width="320" height="1"/>
+                        <rect key="frame" x="0.0" y="59" width="320" height="1"/>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="HGe-Lb-X94"/>
