支持网页历史查看，体验优化

--- a/IpaDownloadTool/IpaDownloadTool/ZXIpaUrlHis(网页加载历史)/ZXIpaUrlHisVC.xib
+++ b/IpaDownloadTool/IpaDownloadTool/ZXIpaUrlHis(网页加载历史)/ZXIpaUrlHisVC.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ZXIpaUrlHisVC">
             <connections>
+                <outlet property="tableView" destination="kil-63-bk3" id="o18-J4-8bP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,6 +23,9 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="kil-63-bk3" customClass="ZXTableView">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="zx_cellClassName" value="ZXIpaUrlHisCell"/>
+                    </userDefinedRuntimeAttributes>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
