--- a/IpaDownloadTool/IpaDownloadTool/ZXIpaUrlHis(网页加载历史)/View/ZXIpaUrlHisCell.xib
+++ b/IpaDownloadTool/IpaDownloadTool/ZXIpaUrlHis(网页加载历史)/View/ZXIpaUrlHisCell.xib
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,13 +11,90 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ZXIpaUrlHisCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zuk-0h-9DG">
+                        <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Yyh-ex-hnE">
+                                <rect key="frame" x="8" y="8" width="44" height="44"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="Zuk-0h-9DG" secondAttribute="height" id="Grw-0b-Du5"/>
+                            <constraint firstItem="Yyh-ex-hnE" firstAttribute="top" secondItem="Zuk-0h-9DG" secondAttribute="top" constant="8" id="IoQ-oB-fEb"/>
+                            <constraint firstItem="Yyh-ex-hnE" firstAttribute="leading" secondItem="Zuk-0h-9DG" secondAttribute="leading" constant="8" id="MXT-Xv-njS"/>
+                            <constraint firstAttribute="bottom" secondItem="Yyh-ex-hnE" secondAttribute="bottom" constant="8" id="mee-Bk-oI4"/>
+                            <constraint firstAttribute="trailing" secondItem="Yyh-ex-hnE" secondAttribute="trailing" constant="8" id="wAg-SH-Z4u"/>
+                        </constraints>
+                    </view>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.40000000596046448" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="more_icon" translatesAutoresizingMaskIntoConstraints="NO" id="t7A-ps-yMG">
+                        <rect key="frame" x="298" y="24" width="12" height="12"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="12" id="7uQ-Az-4mB"/>
+                            <constraint firstAttribute="height" constant="12" id="Thj-bd-idd"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zNU-Z7-zjv">
+                        <rect key="frame" x="65" y="10" width="223" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="4RB-yK-ssd"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kqr-Do-PNu">
+                        <rect key="frame" x="65" y="30" width="223" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="D3O-j9-Yrr"/>
+                            <constraint firstAttribute="height" constant="20" id="hga-Yd-NjC"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view alpha="0.20000000298023224" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bzn-BY-F30">
+                        <rect key="frame" x="0.0" y="59" width="320" height="1"/>
+                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="kSL-wV-vY3"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="t7A-ps-yMG" secondAttribute="trailing" constant="10" id="179-P5-c84"/>
+                    <constraint firstItem="zNU-Z7-zjv" firstAttribute="leading" secondItem="Zuk-0h-9DG" secondAttribute="trailing" constant="5" id="3hX-id-FT3"/>
+                    <constraint firstItem="zNU-Z7-zjv" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="-10" id="68s-OC-THK"/>
+                    <constraint firstItem="kqr-Do-PNu" firstAttribute="trailing" secondItem="zNU-Z7-zjv" secondAttribute="trailing" id="DwF-de-kz7"/>
+                    <constraint firstItem="Zuk-0h-9DG" firstAttribute="width" secondItem="Zuk-0h-9DG" secondAttribute="height" id="GVt-34-elx"/>
+                    <constraint firstAttribute="bottom" secondItem="bzn-BY-F30" secondAttribute="bottom" id="Nep-WF-JmP"/>
+                    <constraint firstItem="Zuk-0h-9DG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Nmh-Lp-536"/>
+                    <constraint firstAttribute="bottom" secondItem="Zuk-0h-9DG" secondAttribute="bottom" id="UDM-Cv-QsJ"/>
+                    <constraint firstAttribute="trailing" secondItem="bzn-BY-F30" secondAttribute="trailing" id="b03-JM-mKK"/>
+                    <constraint firstItem="t7A-ps-yMG" firstAttribute="leading" secondItem="zNU-Z7-zjv" secondAttribute="trailing" constant="10" id="hHU-lY-0QQ"/>
+                    <constraint firstItem="Zuk-0h-9DG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="ku0-Li-0uE"/>
+                    <constraint firstItem="kqr-Do-PNu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" constant="10" id="lvf-ir-T4m"/>
+                    <constraint firstItem="bzn-BY-F30" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="oZq-MQ-sJn"/>
+                    <constraint firstItem="t7A-ps-yMG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="yVh-j7-RaP"/>
+                    <constraint firstItem="kqr-Do-PNu" firstAttribute="leading" secondItem="zNU-Z7-zjv" secondAttribute="leading" id="z81-IA-0EE"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
+            <connections>
+                <outlet property="iconImgV" destination="Yyh-ex-hnE" id="rur-Dr-VVJ"/>
+                <outlet property="titleLabel" destination="zNU-Z7-zjv" id="fyR-HO-Kig"/>
+                <outlet property="urlLabel" destination="kqr-Do-PNu" id="U5X-Ux-KB7"/>
+            </connections>
+            <point key="canvasLocation" x="18.840579710144929" y="59.598214285714285"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="more_icon" width="200" height="200"/>
+    </resources>
 </document>
