优化ipa提取算法；添加webview操控控件

--- a/IpaDownloadTool/IpaDownloadTool/ZXIpaGet(获取应用信息)/ZXIpaGetVC.xib
+++ b/IpaDownloadTool/IpaDownloadTool/ZXIpaGet(获取应用信息)/ZXIpaGetVC.xib
@@ -22,7 +22,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vxn-7K-wp1">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="798"/>
                     <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                 </webView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="43e-VL-V8a">
@@ -39,21 +39,97 @@
                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                     <state key="normal" title="Button"/>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4V2-ei-UyB">
+                    <rect key="frame" x="0.0" y="812" width="414" height="50"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZsM-7B-zcu">
+                            <rect key="frame" x="20" y="5" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="ptW-Wb-U9m"/>
+                                <constraint firstAttribute="height" constant="40" id="tzP-Nj-UfM"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="arrowshape.turn.up.left" catalog="system"/>
+                            <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vte-F8-aWq">
+                            <rect key="frame" x="70" y="5" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="R9V-Z9-R4E"/>
+                                <constraint firstAttribute="height" constant="40" id="RcS-Mg-key"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="arrowshape.turn.up.left" catalog="system"/>
+                            <buttonConfiguration key="configuration" style="plain" image="arrow.right" catalog="system"/>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DSz-u9-30w">
+                            <rect key="frame" x="354" y="5" width="40" height="40"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="40" id="U1m-Es-8JR"/>
+                                <constraint firstAttribute="height" constant="40" id="mNC-rw-WKL"/>
+                            </constraints>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="arrowshape.turn.up.left" catalog="system"/>
+                            <buttonConfiguration key="configuration" style="plain" image="arrow.clockwise" catalog="system"/>
+                            <connections>
+                                <action selector="webReloadAction:" destination="-1" eventType="touchUpInside" id="xpN-eE-EWW"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="关于IPA提取器" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5Hd-Se-SDP">
+                            <rect key="frame" x="120" y="16.5" width="184" height="17"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Qx-qP-p27">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
+                            <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="etL-dg-1Pe"/>
+                            </constraints>
+                        </view>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <constraints>
+                        <constraint firstItem="5Hd-Se-SDP" firstAttribute="centerY" secondItem="4V2-ei-UyB" secondAttribute="centerY" id="288-nV-Fiv"/>
+                        <constraint firstItem="6Qx-qP-p27" firstAttribute="leading" secondItem="4V2-ei-UyB" secondAttribute="leading" id="Eq5-bJ-6KB"/>
+                        <constraint firstItem="ZsM-7B-zcu" firstAttribute="centerY" secondItem="4V2-ei-UyB" secondAttribute="centerY" id="Fgm-lt-fze"/>
+                        <constraint firstItem="vte-F8-aWq" firstAttribute="centerY" secondItem="4V2-ei-UyB" secondAttribute="centerY" id="I3e-sK-OFk"/>
+                        <constraint firstItem="DSz-u9-30w" firstAttribute="leading" secondItem="5Hd-Se-SDP" secondAttribute="trailing" constant="50" id="Ltf-jq-hC9"/>
+                        <constraint firstItem="DSz-u9-30w" firstAttribute="centerY" secondItem="4V2-ei-UyB" secondAttribute="centerY" id="amO-L1-RYj"/>
+                        <constraint firstAttribute="height" constant="50" id="bfo-uJ-Ekc"/>
+                        <constraint firstItem="vte-F8-aWq" firstAttribute="leading" secondItem="ZsM-7B-zcu" secondAttribute="trailing" constant="10" id="kXm-jM-9Rd"/>
+                        <constraint firstItem="5Hd-Se-SDP" firstAttribute="leading" secondItem="vte-F8-aWq" secondAttribute="trailing" constant="10" id="lz3-Rw-d7P"/>
+                        <constraint firstItem="ZsM-7B-zcu" firstAttribute="leading" secondItem="4V2-ei-UyB" secondAttribute="leading" constant="20" id="nxa-Mc-h0P"/>
+                        <constraint firstItem="6Qx-qP-p27" firstAttribute="top" secondItem="4V2-ei-UyB" secondAttribute="top" id="r7a-BI-t3X"/>
+                        <constraint firstAttribute="trailing" secondItem="6Qx-qP-p27" secondAttribute="trailing" id="xJq-4A-UIY"/>
+                        <constraint firstAttribute="trailing" secondItem="DSz-u9-30w" secondAttribute="trailing" constant="20" id="zRZ-fF-htm"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="IUG-zQ-Wdc"/>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="vxn-7K-wp1" secondAttribute="bottom" id="8kV-vO-lNe"/>
+                <constraint firstItem="4V2-ei-UyB" firstAttribute="leading" secondItem="IUG-zQ-Wdc" secondAttribute="leading" id="0Er-Mr-zsc"/>
+                <constraint firstItem="IUG-zQ-Wdc" firstAttribute="bottom" secondItem="4V2-ei-UyB" secondAttribute="bottom" id="8Vk-6g-pfy"/>
                 <constraint firstItem="ZxB-Lg-ZYs" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Esh-QX-8d1"/>
                 <constraint firstItem="43e-VL-V8a" firstAttribute="top" secondItem="ZxB-Lg-ZYs" secondAttribute="bottom" id="H0X-J4-ucf"/>
                 <constraint firstAttribute="trailing" secondItem="vxn-7K-wp1" secondAttribute="trailing" id="NgL-IX-S9I"/>
                 <constraint firstItem="43e-VL-V8a" firstAttribute="leading" secondItem="IUG-zQ-Wdc" secondAttribute="leading" constant="10" id="TmN-0d-w7Y"/>
+                <constraint firstItem="ZxB-Lg-ZYs" firstAttribute="top" secondItem="vxn-7K-wp1" secondAttribute="bottom" id="Uce-NA-667"/>
                 <constraint firstItem="IUG-zQ-Wdc" firstAttribute="trailing" secondItem="43e-VL-V8a" secondAttribute="trailing" constant="10" id="WeN-0Z-GgA"/>
                 <constraint firstItem="IUG-zQ-Wdc" firstAttribute="bottom" secondItem="43e-VL-V8a" secondAttribute="bottom" constant="10" id="m03-QJ-z0R"/>
+                <constraint firstItem="4V2-ei-UyB" firstAttribute="trailing" secondItem="IUG-zQ-Wdc" secondAttribute="trailing" id="n1W-KQ-Cho"/>
                 <constraint firstItem="vxn-7K-wp1" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="sIb-go-3Re"/>
                 <constraint firstItem="vxn-7K-wp1" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="zEt-qi-cTx"/>
             </constraints>
-            <point key="canvasLocation" x="48" y="21"/>
+            <point key="canvasLocation" x="47.826086956521742" y="20.758928571428569"/>
         </view>
     </objects>
+    <resources>
+        <image name="arrow.backward" catalog="system" width="128" height="95"/>
+        <image name="arrow.clockwise" catalog="system" width="113" height="128"/>
+        <image name="arrow.right" catalog="system" width="128" height="95"/>
+        <image name="arrowshape.turn.up.left" catalog="system" width="128" height="104"/>
+    </resources>
 </document>
