--- a/IpaDownloadTool/IpaDownloadTool/ZXIpaGet(获取应用信息)/ZXIpaGetVC.xib
+++ b/IpaDownloadTool/IpaDownloadTool/ZXIpaGet(获取应用信息)/ZXIpaGetVC.xib
@@ -13,6 +13,9 @@
                 <outlet property="githubBtn" destination="43e-VL-V8a" id="ewx-Yf-tlT"/>
                 <outlet property="versionBtn" destination="ZxB-Lg-ZYs" id="DVD-iG-Krp"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="webBackBtn" destination="ZsM-7B-zcu" id="s5b-Mo-hTS"/>
+                <outlet property="webNextBtn" destination="vte-F8-aWq" id="s7c-p3-Epl"/>
+                <outlet property="webReloadBtn" destination="DSz-u9-30w" id="4Xm-Rv-1qx"/>
                 <outlet property="webView" destination="vxn-7K-wp1" id="Hkr-7v-8R0"/>
             </connections>
         </placeholder>
@@ -51,6 +54,9 @@
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" image="arrowshape.turn.up.left" catalog="system"/>
                             <buttonConfiguration key="configuration" style="plain" image="arrow.backward" catalog="system"/>
+                            <connections>
+                                <action selector="webBackAction:" destination="-1" eventType="touchUpInside" id="p7W-l0-f2e"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vte-F8-aWq">
                             <rect key="frame" x="70" y="5" width="40" height="40"/>
@@ -61,6 +67,9 @@
                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                             <state key="normal" image="arrowshape.turn.up.left" catalog="system"/>
                             <buttonConfiguration key="configuration" style="plain" image="arrow.right" catalog="system"/>
+                            <connections>
+                                <action selector="webNextAction:" destination="-1" eventType="touchUpInside" id="4JM-OA-ysk"/>
+                            </connections>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DSz-u9-30w">
                             <rect key="frame" x="354" y="5" width="40" height="40"/>
